--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    name = Mando
-    email = Mando@Brown-Eyes
+  name = Mando
+  email = Mando@Brown-Eyes
 
-# git config --local include.path "../.gitconfig"
+# git config --local include.path ../.gitconfig
